Refactor Gateway POM to inherit from spring-boot-starter-parent